0.15 - in development
---------------------
 * New dialog:
    * qrun (Alexander Belchenko)
 * qcat:
   * Improve speed of syntax highlighting. (#442965, Atsuo Ishimoto)
 * qconflicts:
   * Enable multiple selections of conflict items to resolve or launch merge
     tool for them. (#415393, Craig Hewetson)
 * qlog:
   * Fixed regression with --no-graph feature. (#448232, Craig Hewetson)
 * qsubprocess: new command-line option --bencode to use bencoded command list.
   (#392920, Alexander Belchenko)
 * qtag: 
   * sort tags alphabeticaly and case-insensitive. (#423075, Craig Hewetson)
   * save/restore the size of dialog. (#435859, Craig Hewetson)


0.14.4 - In Devlopment
----------------------

* qcommit/qrevert: Fixed a bug were the pending merges graph was being loaded
                   twice. (Gary van der Merwe)


0.14.3 - 2009-10-02
-------------------
Bugfixes release.

 * qcommit:
    * Fixed bug with inability of run qcommit /path/to/tree/root after merge.
      (#433137, Alexander Belchenko)
 * qlog:
    * Ensure that tree objects correctly locked when checking for directories.
      (#436467, Gary van der Merwe)


0.14.2 - 2009-09-16
-------------------
Bugfixes.

 * qlog:
    * Fixed couple of problems with proper rendering of branch labels
      when inspecting log for several branches (e.g. in shared repo).
      (Gary van der Merwe)
 * qmerge, qcommit, ...:
   * Fixed a bug where we create the QApp after opening a Branch, but we had
     already installed the QUIFactory(). A branch can be a lightweight checkout
     of a remote location which requires a password. Which wants to open a UI
     dialog, which causes a crash because QApp has not been created yet.
     (#430232, John Arbash Meinel)


0.14.1 - 2009-09-10
-------------------
Maintenance release:

 * qannotate:
   * Fixed a bug when annotating a file in a branch with no working tree.
     (Bug 419477)
   * Fixed a bug were the logwidget would crash trying to render some graphs.